# maive-core-services

./: .gitignore  AGENTS.md  LICENSE  README.md  azure.yaml  docker-compose.yml
src/backend/: .dockerignore  .env.example  .env.example.tmp  .gitignore  Dockerfile  pyproject.toml
src/backend/app/: config.py  dependencies.py  main.py
src/backend/app/api/routes/: __init__.py  agents.py  arcs_surveys.py  assessments.py  bot.py  classifier_predictions.py  health.py  help_content.py  qualitative_feedback.py  sessions.py  students.py  task_attempts.py  telemetry.py  users.py
src/backend/app/application/dtos/: agent_action_dtos.py  arcs_survey_dtos.py  assessment_dtos.py  classifier_prediction_dtos.py  help_content_dtos.py  qualitative_feedback_dtos.py  session_dtos.py  student_dtos.py  task_attempt_dtos.py  telemetry_dtos.py  user_dtos.py
src/backend/app/application/use_cases/: agent_action_use_cases.py  arcs_survey_use_cases.py  assessment_use_cases.py  bot_pipeline_use_case.py  classifier_prediction_use_cases.py  help_content_use_cases.py  qualitative_feedback_use_cases.py  session_use_cases.py  student_use_cases.py  task_attempt_use_cases.py  telemetry_use_cases.py  user_use_cases.py
src/backend/app/cli/: ingest_knowledge.py  qa_audit.py  seed_help_content.py
src/backend/app/domain/entities/: agent_action.py  arcs_survey.py  assessment.py  bot_audit.py  classifier_prediction.py  help_content.py  knowledge_document.py  qualitative_feedback.py  session.py  student.py  task_attempt.py  telemetry.py  user.py
src/backend/app/domain/interfaces/: agent_action_repository.py  arcs_survey_repository.py  assessment_repository.py  bot_audit_repository.py  classifier_prediction_repository.py  help_content_repository.py  knowledge_document_repository.py  qualitative_feedback_repository.py  session_repository.py  student_repository.py  task_attempt_repository.py  telemetry_repository.py  (+1 more)
src/backend/tests/rai/: test_bot_pipeline.py  test_input_validator.py  test_output_validator.py  test_prompt_injection.py  test_topic_gate.py
src/edge-protector/: README.md  app.py  pyproject.toml
(+132 files in other folders)
