[project]
name = "maive-backend"
version = "0.1.0"
description = "MAIVE Core Services — Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.19.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "radon>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
# Strict only on application + domain (DEC-023 / Rubric 7).
# Infrastructure layer is loose because Azure SDK stubs are incomplete.
files = ["app/application", "app/domain"]

[[tool.mypy.overrides]]
module = "app.infrastructure.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/cli/*",
    "app/main.py",
]

[tool.coverage.report]
# Coverage threshold enforced via --cov-fail-under in qa_audit phd-check
# (DEC-023 / Rubric 7). 80% baseline on application + infrastructure/rai.
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
