[project]
name = "edge-protector"
version = "0.1.0"
description = "Token-protected proxy in front of a local Ollama for ad-hoc cloud-to-local debugging"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"
